@@ -90,7 +90,6 @@ gam_client_conn_check_cred(GIOChannel * source, int fd,
     pid_t c_pid;
     uid_t c_uid, s_uid;
     gid_t c_gid;
-    int lack_creds = 0;
 
 #ifdef HAVE_CMSGCRED
     struct {
@@ -106,9 +105,9 @@ gam_client_conn_check_cred(GIOChannel * source, int fd,
     {
         int on = 1;
 
-        if ((lack_creds = (setsockopt(fd, 0, LOCAL_CREDS, &on, sizeof(on))
-			   < 0))) {
+        if (setsockopt(fd, 0, LOCAL_CREDS, &on, sizeof(on)) < 0) {
             gam_error(DEBUG_INFO, "Unable to set LOCAL_CREDS socket option\n");
+            return FALSE;
         }
     }
 #endif
@@ -140,16 +139,16 @@ gam_client_conn_check_cred(GIOChannel * source, int fd,
         goto failed;
     }
 #ifdef HAVE_CMSGCRED
-    if (lack_creds && (cmsg.hdr.cmsg_len < sizeof(cmsg)
-		       || cmsg.hdr.cmsg_type != SCM_CREDS)) {
+    if (cmsg.hdr.cmsg_len < sizeof(cmsg) || cmsg.hdr.cmsg_type != SCM_CREDS) {
         GAM_DEBUG(DEBUG_INFO,
                   "Message from recvmsg() was not SCM_CREDS\n");
+        goto failed;
     }
 #endif
 
     GAM_DEBUG(DEBUG_INFO, "read credentials byte\n");
 
-    if (lack_creds) {
+    {
 #ifdef SO_PEERCRED
         struct ucred cr;
         int cr_len = sizeof(cr);
@@ -174,11 +173,6 @@ gam_client_conn_check_cred(GIOChannel * source, int fd,
                   "Socket credentials not supported on this OS\n");
         goto failed;
 #endif
-    } else {
-      GAM_DEBUG(DEBUG_INFO,
-                  "Socket credentials not supported\n");
-	c_pid = getpid ();
-	goto out;
     }
 
     if (s_uid != c_uid) {
@@ -191,7 +185,6 @@ gam_client_conn_check_cred(GIOChannel * source, int fd,
               "Credentials: s_uid %d, c_uid %d, c_gid %d, c_pid %d\n",
               (int) s_uid, (int) c_uid, (int) c_gid, (int) c_pid);
 
- out:
     if (gam_connection_set_pid(conn, c_pid) < 0) {
         GAM_DEBUG(DEBUG_INFO, "Failed to save PID\n");
         goto failed;
